# Json-Fields

./: Cargo.toml  readme.md
src/: field.rs  lib.rs  migration.rs  schema.rs  schema_type.rs
src/errors/: validation_error.rs
src/field/: custom_field.rs  object_field.rs  optional_field.rs  string_field.rs
src/migration/: json_path.rs  migration_op.rs  operation.rs  operation_kind.rs  resolve_path.rs  set_path.rs
src/migration/operation_kind/: value_source.rs
src/schema/: schema_change.rs
src/schema_type/: advanced_type.rs  basic_type.rs  field.rs
src/schema_type/advanced_type/: advanced_string_type.rs  any_of_type.rs  array_type.rs  object_type.rs  optional_type.rs  tuple_type.rs
src/shared/: mod.rs
src/traits/: validator.rs
