[package]
name = "json-fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
typetag = "0.2.13"
serde_json = "1.0.107"
thiserror = "1.0.49"
regex = "1.10.0"
serde_regex = "1.1.0"
json-search = { git = "https://github.com/jumpdrive-dev/Json-Search", tag = "1.0.1" }
uuid = { version = "1.4.1", features = ["v1", "v4"] }
serde-email = "3.0.0"
